--- a/SchoolSharp.csproj
+++ b/SchoolSharp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>SchoolSharp</RootNamespace>
   </PropertyGroup>
 
 </Project>
